test-data/error/const-yawspeed-no-yawspeed.hltas
version 1
frames
s41lj2-----|------|------|0.001|-|-|1